public enum ProblemEnum {
    CHARDECODE,DATATYPE,DATACORRECT,UNKNOWN
}
